--- a/spec/files/Makefile
+++ b/spec/files/Makefile
@@ -8,6 +8,7 @@ all: $(SRC)
 	$(GCC) $< -no-pie -o nopie.elf
 	$(GCC) $< -Wl,--disable-new-dtags -Wl,-rpath=/not_exists:/lib:/pusheen/is/fat -o rpath.elf
 	$(GCC) $< -Wl,--enable-new-dtags -Wl,-rpath=/not_exists:/lib:/pusheen/is/fat -o runpath.elf
+	$(GCC) $< -fPIE -pie -m32 -o pie32.elf
 
 clean:
 	$(RM) *.elf *.so
