Fix rubocop warnings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,8 +8,12 @@ Gemspec/RequiredRubyVersion:
 Layout/EndOfLine:
   EnforcedStyle: lf
 
-Layout/IndentHeredoc:
+Layout/HeredocIndentation:
   Enabled: false
+
+Layout/LineLength:
+  Enabled: true
+  Max: 120
 
 Metrics/AbcSize:
   Enabled: false
@@ -22,10 +26,6 @@ Metrics/ClassLength:
 
 Metrics/CyclomaticComplexity:
   Enabled: false
-
-Metrics/LineLength:
-  Enabled: true
-  Max: 120
 
 Metrics/MethodLength:
   Enabled: false
