--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
 language: ruby
-sudo: required
 dist: trusty
 os:
   - linux
   - osx
 rvm:
-  - 2.3
   - 2.4
   - 2.5
   - 2.6
+  - 2.7
   - ruby-head
 branches:
   only:
     - master
-matrix:
+jobs:
   allow_failures:
     - rvm: ruby-head
 
