--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,7 @@
 AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
+  NewCops: enable
 
 Gemspec/RequiredRubyVersion:
   Enabled: false
@@ -34,6 +35,9 @@ Metrics/ModuleLength:
   Enabled: false
 
 Naming/HeredocDelimiterNaming:
+  Enabled: false
+
+Style/AccessorGrouping:
   Enabled: false
 
 Style/FormatStringToken:
