Add the test ELF that doesn't have section headers

--- a/spec/files/Makefile
+++ b/spec/files/Makefile
@@ -9,6 +9,7 @@ all: $(SRC)
 	$(GCC) $< -Wl,--disable-new-dtags -Wl,-rpath=/not_exists:/lib:/pusheen/is/fat -o rpath.elf
 	$(GCC) $< -Wl,--enable-new-dtags -Wl,-rpath=/not_exists:/lib:/pusheen/is/fat -o runpath.elf
 	$(GCC) $< -fPIE -pie -m32 -o pie32.elf
+	$(GCC) $< -fPIE -pie -o nosection.elf && ./patch.rb
 
 clean:
 	$(RM) *.elf *.so
